homogenize docs on caps and spaces, no dashes

--- a/docs/source/how-tos/Polychromatic Propagation.ipynb
+++ b/docs/source/how-tos/Polychromatic Propagation.ipynb
@@ -17,7 +17,7 @@
     "where $D$ is the diameter of the aperture.  Additionally, if we use a lens to focus the beam and invoke the Fourier transforming property of lenses, then:\n",
     "\n",
     "$$\n",
-    "dx = \\frac{f\\lambda}{D} = \\lambda\\text{F#}\n",
+    "dx = \\frac{f\\lambda}{D} = \\lambda\\text{F\\#}\n",
     "$$\n",
     "\n",
     "where $dx$ is the increment of the abscissa of the image plane and $f$ is the focal length of the lens.\n",
@@ -92,7 +92,7 @@
     "    wf = propagation.Wavefront.from_amp_and_phase(amp, phs, wvl, dx)\n",
     "    focused = wf.focus_fixed_sampling(efl, res_el, 512) # 512 samples in the output domain\n",
     "    components.append(focused.intensity.data) # sum of intensities, wvls are incoherent to each other\n",
-    "    \n",
+    "\n",
     "# psf is just an array\n",
     "psf = polynomials.sum_of_2d_modes(components, spectral_weights)\n",
     "# until we enrich it\n",
