--- a/docs/source/tutorials/First Interferogram.ipynb
+++ b/docs/source/tutorials/First Interferogram.ipynb
@@ -170,8 +170,13 @@
     "- do any cropping and masking using functions from `prysm.geometry` or your own, based on the `x, y, r, t` attributes of the interferogram object and the `interf.mask` function.\n",
     "- Evaluate statistics by using the computed properties of your interferogram\n",
     "\n",
-    "We will cover more topics in the [advanced](../how-tos/Advanced-Interferogram-Processing.ipynb) tutorial."
+    "We will cover more topics in the [advanced](../how-tos/Advanced%20Interferogram%20Processing.ipynb) tutorial."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
