--- a/docs/source/tutorials/Lens MTF Model.ipynb
+++ b/docs/source/tutorials/Lens MTF Model.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Lens MTF Model\n",
     "\n",
-    "In this tutorial, we will show how to use prysm to model the MTF of a lens based on a polynomial model of its aberrations.  We will utilize the concepts from the [First Diffraction Model](./First-Diffraction-Model.ipynb) tutorial in constructing the forward model.\n",
+    "In this tutorial, we will show how to use prysm to model the MTF of a lens based on a polynomial model of its aberrations.  We will utilize the concepts from the [First Diffraction Model](./First%20Diffraction%20Model.ipynb) tutorial in constructing the forward model.\n",
     "\n",
     "MTF is defined as the magnitude of the Fourier transform of the Point Spread Function (PSF), normalized by its value at the origin.  Without writing the normalization, that is simply:\n",
     "\n",
