--- a/docs/source/tutorials/First Diffraction Model.ipynb
+++ b/docs/source/tutorials/First Diffraction Model.ipynb
@@ -215,7 +215,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.12 ('prysm')",
+   "display_name": "prysm",
    "language": "python",
    "name": "python3"
   },
@@ -229,12 +229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "5be6ce34c2868258f3cc626bd7cc451c1e001037b347cf86bc40933442f60bd7"
-   }
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
