--- a/docs/source/tutorials/Raytracing OAP Trains.ipynb
+++ b/docs/source/tutorials/Raytracing OAP Trains.ipynb
@@ -24,10 +24,10 @@
     "\n",
     "import numpy as np\n",
     "\n",
-    "from prysm.experimental.raytracing.surfaces import Surface\n",
-    "from prysm.experimental.raytracing.spencer_and_murty import raytrace\n",
-    "from prysm.experimental.raytracing.raygen import generate_collimated_ray_fan\n",
-    "from prysm.experimental.raytracing.plotting import plot_rays, plot_optics\n",
+    "from prysm.x.raytracing.surfaces import Surface\n",
+    "from prysm.x.raytracing.spencer_and_murty import raytrace\n",
+    "from prysm.x.raytracing.raygen import generate_collimated_ray_fan\n",
+    "from prysm.x.raytracing.plotting import plot_rays, plot_optics\n",
     "\n",
     "from matplotlib import pyplot as plt"
    ]
@@ -247,7 +247,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "prysm",
    "language": "python",
    "name": "python3"
   },
@@ -261,7 +261,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
